<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Triples</string>
  <string name="pause">Pause</string>
  <string name="play">Play</string>
  <string name="cards_remaining">CARDS REMAINING</string>
  <string name="time_elapsed">TIME ELAPSED</string>
  <string name="games_no_items">No games played yet.\nTap + to create a new game.</string>
  <string name="list_of_games">LIST OF GAMES</string>
  <string name="new_game">New Game</string>
  <string name="no_current_games">No Current Games.\nTo start a new game, click +.</string>
  <string name="current">CURRENT</string>
  <string name="completed">COMPLETED</string>
  <string name="delete">Delete?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="no_completed_games">You haven\'t finished any games.</string>
  <string name="game_over">Game Over!</string>
  <string name="paused">PAUSED</string>
  <string name="sort">Sort</string>
  <string name="sort_by">Sort by:</string>
  <string name="ascending">Ascending</string>
  <string name="descending">Descending</string>
  <string name="rules_title">RULES</string>
  <string name="example">EXAMPLE</string>
  <string name="rules_text">Each card has four properties: number, shape, pattern and colour. The aim of the game is to
    select a valid triple. A valid triple is three cards where each property is either the same for all three cards or
    different for all three cards.
  </string>
  <string name="show_me_another">Show me another</string>
  <string name="help">Help</string>
  <string name="number">Number:</string>
  <string name="shape">Shape:</string>
  <string name="pattern">Pattern:</string>
  <string name="colour">Colour:</string>
  <string name="all_same">all the same.</string>
  <string name="all_different">all different.</string>
  <string name="graph">GRAPH</string>
  <string name="summary">SUMMARY</string>
  <string name="number_completed">"Number finished:"</string>
  <string name="fastest_time">Fastest time:</string>
  <string name="average_time">Average time:</string>
  <string name="period">Period:</string>
  <string name="statistics">STATISTICS</string>
  <string name="all_time">All Time</string>
  <string name="past_day">Past Day</string>
  <string name="past_week">Past Week</string>
  <string name="past_month">Past Month</string>
  <string name="past_3_months">Past 3 Months</string>
  <string name="past_6_months">Past 6 Months</string>
  <string name="past_year">Past Year</string>
  <string name="past_10_games">Past 10 games</string>
  <string name="past_50_games">Past 50 games</string>
  <string name="statistics_for">STATISTICS FOR</string>
  <string name="settings">Settings</string>
  <string name="date_played">DATE PLAYED</string>
  <string name="time_taken">TIME TAKEN</string>
  <string name="sign_in_why">Sign in with Google to share your scores with your friends.</string>
  <string name="app_id">434215387101</string>
  <string name="leaderboards">Google Play Leaderboards</string>
  <string name="signout">Sign Out</string>
  <string name="time_remaining">TIME REMAINING</string>
  <string name="triples_found">TRIPLES FOUND</string>

</resources>