<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="10dp"
  android:background="#E0E0E0">

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:singleLine="true"
      android:text="@string/rules_title"
      android:textColor="#33B5E5"
      android:textStyle="bold" />

    <View
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="#33B5E5" />

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/rules_text" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="10dp"
      android:singleLine="true"
      android:text="@string/example"
      android:textColor="#33B5E5"
      android:textStyle="bold" />

    <View
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:background="#33B5E5" />

    <com.antsapps.triples.cardsview.VerticalCardsView
      android:id="@+id/cards_view"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="8dp">

      <TableRow
        android:id="@+id/TableRow0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingRight="5dp"
          android:text="@string/number" />

        <TextView
          android:id="@+id/number_explanation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      </TableRow>

      <TableRow
        android:id="@+id/TableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingRight="5dp"
          android:text="@string/shape" />

        <TextView
          android:id="@+id/shape_explanation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      </TableRow>

      <TableRow
        android:id="@+id/TableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingRight="5dp"
          android:text="@string/pattern" />

        <TextView
          android:id="@+id/pattern_explanation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
      </TableRow>

      <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingRight="5dp"
          android:text="@string/colour" />

        <TextView
          android:id="@+id/color_explanation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

      </TableRow>
    </TableLayout>

    <View
      android:layout_width="fill_parent"
      android:layout_height="1dp"
      android:layout_marginLeft="24dp"
      android:layout_marginRight="24dp"
      android:background="@android:color/darker_gray" />

    <Button
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/show_me_another"
      style="android:style/Widget.ActionButton"
      android:onClick="showAnother" />
  </LinearLayout>

</ScrollView>