<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical" >

  <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="#33B5E5" />

  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/number_completed" />

      <TextView
        android:id="@+id/number_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/fastest_time" />

      <TextView
        android:id="@+id/fastest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/average_time" />

      <TextView
        android:id="@+id/average_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </TableRow>
  </TableLayout>

</LinearLayout>